--- a/blazorserver/PartsUnlimitedWebsite/Views/ShoppingCart/Index.cshtml
+++ b/blazorserver/PartsUnlimitedWebsite/Views/ShoppingCart/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@using PartsUnlimited
 @using PartsUnlimited.Models
+@using PartsUnlimited.ViewModels
 @using PartsUnlimitedWebsite.RazorComponents
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
@@ -9,10 +10,8 @@
     ViewBag.Title = "Shopping Cart";
 }
 
-<component
-    render-mode="ServerPrerendered"
-    type="typeof(ShoppingCartDetailsWidget)"
-    param-ShoppingCartId="ShoppingCart.GetCartId(Context)"
-    param-DetailsTemplate="@Url.Action("Details", "Store", new { id = "$0" })"
-    param-model="PartsUnlimited.ViewModels.ShoppingCartViewModel2.From(Model)"
-    param-Checkout="@Url.Action("AddressAndPayment", "Checkout", null)" />
+<component render-mode="Server"
+           type="typeof(ShoppingCartDetailsWidget)"
+           param-ShoppingCartId="ShoppingCart.GetCartId(Context)"
+           param-DetailsTemplate="@Url.Action("Details", "Store", new { id = "$0" })"
+           param-Checkout="@Url.Action("AddressAndPayment", "Checkout", null)" />
