Switch Blazor Server to use shopping cart service

--- a/blazorserver/PartsUnlimitedWebsite/RazorComponents/OrderCostSummaryWidget.razor
+++ b/blazorserver/PartsUnlimitedWebsite/RazorComponents/OrderCostSummaryWidget.razor
@@ -1,6 +1,4 @@
-﻿@using PartsUnlimited.Shared;
-
-<div class="cost-summary">
+﻿<div class="cost-summary">
     <div class="row">
         <div class="col-xs-12 col-sm-6 col-sm-offset-6 col-md-4 col-md-offset-8">
             <div class="row">
