--- a/blazorwasm/PartsUnlimited.Client/ProtectedShoppingCartDetailsWidget.razor
+++ b/blazorwasm/PartsUnlimited.Client/ProtectedShoppingCartDetailsWidget.razor
@@ -2,18 +2,15 @@
 <CascadingAuthenticationState>
     <AuthorizeView>
         <Authorized>
-            <ShoppingCartDetailsWidget ReadOnly="@(false || !_isBrowser)" @attributes="Params" />
+            <ShoppingCartDetailsWidget @attributes="Params" />
         </Authorized>
-        <Authorizing><ShoppingCartDetailsWidget ReadOnly="@(false || !_isBrowser)" @attributes="Params" /></Authorizing>
         <NotAuthorized>
-            <ShoppingCartDetailsWidget ReadOnly="true" @attributes="Params" />
             <Authenticate></Authenticate>
         </NotAuthorized>
     </AuthorizeView>
 </CascadingAuthenticationState>
 
 @code{
-    [Parameter(CaptureUnmatchedValues = true)] public IDictionary<string,object> Params { get; set; }
-
-    private bool _isBrowser = RuntimeInformation.IsOSPlatform(OSPlatform.Create("browser"));
+    [Parameter(CaptureUnmatchedValues = true)]
+    public IDictionary<string, object> Params { get; set; }
 }
