--- a/blazorwasm/PartsUnlimitedWebsite/Views/ShoppingCart/Index.cshtml
+++ b/blazorwasm/PartsUnlimitedWebsite/Views/ShoppingCart/Index.cshtml
@@ -3,17 +3,15 @@
 @using PartsUnlimited.ViewModels;
 @using PartsUnlimited.Client
 @using PartsUnlimitedWebsite.Services 
-@inject ServerCartClient CartClient 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 @model PartsUnlimited.ViewModels.ShoppingCartViewModel
 @{
     ViewBag.Title = "Shopping Cart";
-    CartClient.ShoppingCartId = ShoppingCart.GetCartId(Context);
 }
 
-<component render-mode="WebAssemblyPrerendered"
-           type="typeof(ProtectedShoppingCartDetailsWidget)"
+<component render-mode="WebAssembly"
+           type="typeof(ShoppingCartDetailsWidget)"
            param-ShoppingCartId="ShoppingCart.GetCartId(Context)"
            param-InitialModel="ShoppingCartViewModel.ToModel(Model)"
            param-DetailsTemplate="@Url.Action("Details", "Store", new { id = "$0" })"
