--- a/blazorwasm/PartsUnlimited.Client/ProtectedShoppingCartDetailsWidget.razor
+++ b/blazorwasm/PartsUnlimited.Client/ProtectedShoppingCartDetailsWidget.razor
@@ -5,7 +5,7 @@
             <ShoppingCartDetailsWidget @attributes="Params" />
         </Authorized>
         <NotAuthorized>
-            <Authenticate></Authenticate>
+            <Authenticate />
         </NotAuthorized>
     </AuthorizeView>
 </CascadingAuthenticationState>
